--- a/src/styles/start-button.css
+++ b/src/styles/start-button.css
@@ -8,8 +8,8 @@
       border-radius: 25px;
       border: 2px solid white;
       font-size: 50px;
-      height: 100px;
       width: 200px;
+      height: 100px;
       position: absolute;
       text-align: center;
       justify-content: center;
@@ -24,7 +24,7 @@
         /* Fade-In Effect */
         .visible {
             visibility: visible;
-            opacity: .5;
+            opacity: .7;
             transition: opacity 2s linear;
         }
         /* Fade-Out Effect */
@@ -34,3 +34,13 @@
             transition: visibility 0s 1s, opacity 1s linear;
         }
 
+#title {
+ 
+    font-size: 64px;
+    color: white;
+    position: absolute;
+    top: 100px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+}
