--- a/src/styles/start-button.css
+++ b/src/styles/start-button.css
@@ -1,54 +1,64 @@
+#splash-page-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+}
+
 
 #start-button {
-      display: flex;
-      background: gray;
+    display: flex;
+    background: gray;
 
-      color: white;
-      font-weight: bold;
-      border-radius: 25px;
-      border: 2px solid white;
-      font-size: 50px;
-      width: 200px;
-      height: 100px;
-      text-align: center;
-      justify-content: center;
-      align-items: center;
+    color: white;
+    font-weight: bold;
+    border-radius: 25px;
+    border: 2px solid white;
+    font-size: 50px;
+    width: 200px;
+    height: 100px;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+}
+
+.options {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #start-button:hover {
-      background: rgb(91, 91, 91);
+    background: rgb(91, 91, 91);
 }
 
 
-        /* Fade-In Effect */
-        .visible {
-            visibility: visible;
-            opacity: .7;
-            transition: opacity 2s linear;
-        }
-        /* Fade-Out Effect */
-        .hidden {
-            visibility: hidden;
-            opacity: 0;
-            transition: visibility 0s 1s, opacity 1s linear;
-        }
+/* Fade-In Effect */
+.visible {
+    visibility: visible;
+    opacity: .7;
+    transition: opacity 2s linear;
+}
+
+/* Fade-Out Effect */
+.hidden {
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0s 1s, opacity 1s linear;
+}
 
 #title {
-    position: absolute;
     font-size: 64px;
     color: white;
     top: 100px;
     justify-content: center;
     align-items: center;
     display: flex;
-    
+
 }
 
-.instructions {
-    position: absolute;
-    top: 60%;
-    align-items: center;
-}
+
 
 #instructions {
     display: flex;
@@ -56,12 +66,11 @@
     color: white;
 
 
-    padding: 10px 10px;
     font-size: 50px;
     width: 600px;
     height: 200px;
     text-align: center;
     justify-content: center;
     align-items: center;
-    
+
 }
