--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -8,6 +8,8 @@ body {
       justify-content: center;
       align-items: center;
       flex-direction: column;
+      overflow: hidden;
+      
 }
 
 
