--- a/src/styles/start-button.css
+++ b/src/styles/start-button.css
@@ -4,6 +4,8 @@
     justify-content: center;
     align-items: center;
     position: absolute;
+    width: 100%;
+    height: 100%;
 }
 
 
@@ -51,11 +53,11 @@
 #title {
     font-size: 64px;
     color: white;
-    top: 100px;
     justify-content: center;
     align-items: center;
     display: flex;
-
+    margin: 0px;
+    
 }
 
 
@@ -65,12 +67,26 @@
 
     color: white;
 
-
     font-size: 50px;
-    width: 600px;
-    height: 200px;
+    width: 70%;
     text-align: center;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    padding: 0px;
+    margin-bottom: 30px;
+    margin-top: 0px;
+}
 
+#instructions > p {
+    margin: 10px;
+}
+
+#important {
+    font-weight: bold;
+}
+
+#important:hover {
+    transform: scale(1.05);
+    color: powderblue
 }
