--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,3 +1,4 @@
+@import url(https://fonts.googleapis.com/css?family=Montserrat);
 
 html {
       background:  #00001a;
@@ -9,35 +10,7 @@ body {
       align-items: center;
       flex-direction: column;
       overflow: hidden;
-
-}
-
-
-
-
-#sound {
-      margin-left: 20px;
-      height: auto;
-      width: 60px;
-      border: 2px solid white;
-      border-radius: 10px;
-      display: flex;
-      color: white;
-      background: rgb(112, 140, 157);
-      align-items: center;
-      justify-content: center;
-      font-weight: bold;
-      padding: 5px 5px;
-     
-}
-
-#sound:hover {
-      background: rgb(21, 98, 123);
-}
-
-
-.anchor {
-      position: fixed;
-      top: 20px;
-      right: 20px;
+      padding: 0px;
+      margin: 0px;
+      background:  #00001a;
 }
