--- a/src/styles/start-button.css
+++ b/src/styles/start-button.css
@@ -15,7 +15,7 @@
 #sound {
     font-size: 1.5em;
     height: auto;
-    width: 2%;
+    width: auto;
     border: 2px solid white;
     border-radius: 10px;
     display: flex;
@@ -25,7 +25,11 @@
     justify-content: center;
     font-weight: bold;
     padding: 8px;
-   
+    position: fixed;
+    top: 2%;
+    right: 1%;
+    opacity: 60%;
+    
 }
 
 #sound:hover {
@@ -35,14 +39,9 @@
     /* transition: transform .3s;
     transition: color .4s; */
     transition: all .4s;
+    opacity: 100%;
 }
 
-
-.anchor {
-    position: fixed;
-    top: 2%;
-    right: 1%;
-}
 
 
 #start-button {
@@ -104,6 +103,7 @@
     display: flex;
     
     width: 100%;
+    opacity: 100%;
 }
 
 
@@ -171,6 +171,8 @@ svg {
     width: 100%;
     height: 300px;
     margin: 0 auto;
+    opacity: 100%;
+
 }
 
 .text-copy {
@@ -215,6 +217,8 @@ svg {
 #title {
     transition: transform 1s;
     margin-bottom: 1%;
+    opacity: 100%;
+
 }
 #title:hover {
     transform: scale(1.1);
