--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Montserrat);
 
 html {
-      background:  #00001a;
+      background:  #000000;
 }
 
 body {
@@ -12,5 +12,5 @@ body {
       overflow: hidden;
       padding: 0px;
       margin: 0px;
-      background:  #00001a;
+      background:  #000000;
 }
